content/v1.3.0/zh/api/catalog-ui.md
---
title: Gauntlet UI 类目录 / Class Catalog
extra:
  sidebar: auto
---
# Gauntlet UI 类目录

## 心智模型

先把 `Gauntlet UI 类目录` 当作这个子系统的入口或数据节点来理解：先看属性代表什么状态，再看方法允许你做什么。

本页列出 1.3.0 源码中该领域全部公开类型，按命名空间分组。共 **179** 个类型，其中 **177** 个已有深度文档页（带链接）。由 `tools/gen-class-catalog.mjs` 从源码自动生成。

> 图例：C=class S=struct I=interface E=enum。带 🔗 的已有深度文档页。

## TaleWorlds.GauntletUI (54)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [AlignmentAxis](/v1.3.15/zh/api/campaign-ext/AlignmentAxis) | 🔗 |
| C | [AnimatedDropdownWidget](/v1.3.15/zh/api/campaign-ext/AnimatedDropdownWidget) | 🔗 |
| C | [AnimationInterpolation](/v1.3.15/zh/api/campaign-ext/AnimationInterpolation) | 🔗 |
| C | [AudioProperty](/v1.3.15/zh/api/campaign-ext/AudioProperty) | 🔗 |
| C | [Brush](/v1.3.15/zh/api/campaign-ext/Brush) | 🔗 |
| C | [BrushAnimation](/v1.3.15/zh/api/campaign-ext/BrushAnimation) | 🔗 |
| C | [BrushAnimationKeyFrame](/v1.3.15/zh/api/campaign-ext/BrushAnimationKeyFrame) | 🔗 |
| C | [BrushAnimationProperty](/v1.3.15/zh/api/campaign-ext/BrushAnimationProperty) | 🔗 |
| E | [BrushAnimationPropertyType](/v1.3.15/zh/api/campaign-ext/BrushAnimationPropertyType) | 🔗 |
| C | [BrushFactory](/v1.3.15/zh/api/campaign-ext/BrushFactory) | 🔗 |
| C | [BrushLayer](/v1.3.15/zh/api/campaign-ext/BrushLayer) | 🔗 |
| C | [BrushLayerAnimation](/v1.3.15/zh/api/campaign-ext/BrushLayerAnimation) | 🔗 |
| E | [BrushLayerSizePolicy](/v1.3.15/zh/api/campaign-ext/BrushLayerSizePolicy) | 🔗 |
| S | [BrushLayerState](/v1.3.15/zh/api/campaign-ext/BrushLayerState) | 🔗 |
| C | [BrushListPanel](/v1.3.15/zh/api/campaign-ext/BrushListPanel) | 🔗 |
| E | [BrushOverlayMethod](/v1.3.15/zh/api/campaign-ext/BrushOverlayMethod) | 🔗 |
| C | [BrushRenderer](/v1.3.15/zh/api/campaign-ext/BrushRenderer) | 🔗 |
| E | [BrushRendererAnimationState](/v1.3.15/zh/api/campaign-ext/BrushRendererAnimationState) | 🔗 |
| S | [BrushState](/v1.3.15/zh/api/campaign-ext/BrushState) | 🔗 |
| C | [CircleActionSelectorWidget](/v1.3.15/zh/api/campaign-ext/CircleActionSelectorWidget) | 🔗 |
| C | [CircleItemPlacerWidget](/v1.3.15/zh/api/campaign-ext/CircleItemPlacerWidget) | 🔗 |
| C | [ContainerItemDescription](/v1.3.15/zh/api/campaign-ext/ContainerItemDescription) | 🔗 |
| C | [EditorAttribute](/v1.3.15/zh/api/campaign-ext/EditorAttribute) | 🔗 |
| C | [EventManager](/v1.3.15/zh/api/campaign-ext/EventManager) | 🔗 |
| C | [FontFactory](/v1.3.15/zh/api/campaign-ext/FontFactory) | 🔗 |
| E | [Function](/v1.3.15/zh/api/campaign-ext/Function) | 🔗 |
| C | [GauntletExtensions](/v1.3.15/zh/api/campaign-ext/GauntletExtensions) | 🔗 |
| E | [GuiEventResult](/v1.3.15/zh/api/campaign-ext/GuiEventResult) | 🔗 |
| E | [GuiEventType](/v1.3.15/zh/api/campaign-ext/GuiEventType) | 🔗 |
| E | [HorizontalAlignment](/v1.3.15/zh/api/campaign-ext/HorizontalAlignment) | 🔗 |
| I | [IBrushAnimationState](/v1.3.15/zh/api/campaign-ext/IBrushAnimationState) | 🔗 |
| I | [IBrushLayerData](/v1.3.15/zh/api/campaign-ext/IBrushLayerData) | 🔗 |
| I | [IDataSource](/v1.3.15/zh/api/campaign-ext/IDataSource) | 🔗 |
| I | [IDropContainer](/v1.3.15/zh/api/campaign-ext/IDropContainer) | 🔗 |
| C | [Language](/v1.3.15/zh/api/campaign-ext/Language) | 🔗 |
| E | [MouseCursors](/v1.3.15/zh/api/campaign-ext/MouseCursors) | 🔗 |
| C | [PropertyOwnerObject](/v1.3.15/zh/api/campaign-ext/PropertyOwnerObject) | 🔗 |
| C | [ResourceTextureProvider](/v1.3.15/zh/api/campaign-ext/ResourceTextureProvider) | 🔗 |
| E | [SizePolicy](/v1.3.15/zh/api/campaign-ext/SizePolicy) | 🔗 |
| C | [SoundProperties](/v1.3.15/zh/api/campaign-ext/SoundProperties) | 🔗 |
| C | [Style](/v1.3.15/zh/api/campaign-ext/Style) | 🔗 |
| E | [StyleAnimationMode](/v1.3.15/zh/api/campaign-ext/StyleAnimationMode) | 🔗 |
| C | [StyleLayer](/v1.3.15/zh/api/campaign-ext/StyleLayer) | 🔗 |
| C | [TextureProvider](/v1.3.15/zh/api/campaign-ext/TextureProvider) | 🔗 |
| C | [TextureProviderFactory](/v1.3.15/zh/api/campaign-ext/TextureProviderFactory) | 🔗 |
| E | Type | — |
| C | [UIContext](/v1.3.15/zh/api/campaign-ext/UIContext) | 🔗 |
| E | [ValueType](/v1.3.15/zh/api/campaign-ext/ValueType) | 🔗 |
| E | [VerticalAlignment](/v1.3.15/zh/api/campaign-ext/VerticalAlignment) | 🔗 |
| C | [VisualDefinition](/v1.3.15/zh/api/campaign-ext/VisualDefinition) | 🔗 |
| C | [VisualState](/v1.3.15/zh/api/campaign-ext/VisualState) | 🔗 |
| E | [VisualStateAnimationState](/v1.3.15/zh/api/campaign-ext/VisualStateAnimationState) | 🔗 |
| C | [WidgetComponent](/v1.3.15/zh/api/campaign-ext/WidgetComponent) | 🔗 |
| C | [WidgetInfo](/v1.3.15/zh/api/campaign-ext/WidgetInfo) | 🔗 |

## TaleWorlds.GauntletUI.BaseTypes (29)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AutoScrollParameters](/v1.3.15/zh/api/campaign-ext/AutoScrollParameters) | 🔗 |
| C | [BasicContainer](/v1.3.15/zh/api/campaign-ext/BasicContainer) | 🔗 |
| C | [BrushWidget](/v1.3.15/zh/api/campaign-ext/BrushWidget) | 🔗 |
| E | [ButtonType](/v1.3.15/zh/api/campaign-ext/ButtonType) | 🔗 |
| C | [ButtonWidget](/v1.3.15/zh/api/campaign-ext/ButtonWidget) | 🔗 |
| C | [Container](/v1.3.15/zh/api/campaign-ext/Container) | 🔗 |
| C | [DragCarrierWidget](/v1.3.15/zh/api/campaign-ext/DragCarrierWidget) | 🔗 |
| C | [DropdownWidget](/v1.3.15/zh/api/campaign-ext/DropdownWidget) | 🔗 |
| C | [EditableTextWidget](/v1.3.15/zh/api/campaign-ext/EditableTextWidget) | 🔗 |
| C | [FloatInputTextWidget](/v1.3.15/zh/api/campaign-ext/FloatInputTextWidget) | 🔗 |
| C | [GridWidget](/v1.3.15/zh/api/campaign-ext/GridWidget) | 🔗 |
| E | [ImageSizePolicies](/v1.3.15/zh/api/campaign-ext/ImageSizePolicies) | 🔗 |
| C | [ImageWidget](/v1.3.15/zh/api/campaign-ext/ImageWidget) | 🔗 |
| C | [IntegerInputPercentageTextWidget](/v1.3.15/zh/api/campaign-ext/IntegerInputPercentageTextWidget) | 🔗 |
| C | [IntegerInputTextWidget](/v1.3.15/zh/api/campaign-ext/IntegerInputTextWidget) | 🔗 |
| C | [ListPanel](/v1.3.15/zh/api/campaign-ext/ListPanel) | 🔗 |
| C | [MaskedTextureWidget](/v1.3.15/zh/api/campaign-ext/MaskedTextureWidget) | 🔗 |
| C | [OnlineImageTextureWidget](/v1.3.15/zh/api/campaign-ext/OnlineImageTextureWidget) | 🔗 |
| C | [RichTextWidget](/v1.3.15/zh/api/campaign-ext/RichTextWidget) | 🔗 |
| C | [ScrollablePanel](/v1.3.15/zh/api/campaign-ext/ScrollablePanel) | 🔗 |
| C | [ScrollablePanelFixedHeaderWidget](/v1.3.15/zh/api/campaign-ext/ScrollablePanelFixedHeaderWidget) | 🔗 |
| C | [ScrollbarWidget](/v1.3.15/zh/api/campaign-ext/ScrollbarWidget) | 🔗 |
| C | [SelectedStateBrushWidget](/v1.3.15/zh/api/campaign-ext/SelectedStateBrushWidget) | 🔗 |
| C | [SliderWidget](/v1.3.15/zh/api/campaign-ext/SliderWidget) | 🔗 |
| C | [TabControl](/v1.3.15/zh/api/campaign-ext/TabControl) | 🔗 |
| C | [TabToggleWidget](/v1.3.15/zh/api/campaign-ext/TabToggleWidget) | 🔗 |
| C | [TextureWidget](/v1.3.15/zh/api/campaign-ext/TextureWidget) | 🔗 |
| C | [TextWidget](/v1.3.15/zh/api/campaign-ext/TextWidget) | 🔗 |
| C | [Widget](/v1.3.15/zh/api/campaign-ext/Widget) | 🔗 |

## TaleWorlds.GauntletUI.Canvas (11)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Canvas](./campaign-ext/Canvas) | 🔗 |
| C | [CanvasElement](./campaign-ext/CanvasElement) | 🔗 |
| C | [CanvasImage](./campaign-ext/CanvasImage) | 🔗 |
| C | [CanvasLine](./campaign-ext/CanvasLine) | 🔗 |
| E | [CanvasLineAlignment](./campaign-ext/CanvasLineAlignment) | 🔗 |
| C | [CanvasLineElement](./campaign-ext/CanvasLineElement) | 🔗 |
| C | [CanvasLineImage](./campaign-ext/CanvasLineImage) | 🔗 |
| C | [CanvasLineText](./campaign-ext/CanvasLineText) | 🔗 |
| C | [CanvasObject](./campaign-ext/CanvasObject) | 🔗 |
| C | [CanvasTextBox](./campaign-ext/CanvasTextBox) | 🔗 |
| C | [CanvasWidget](./campaign-ext/CanvasWidget) | 🔗 |

## TaleWorlds.GauntletUI.Data (15)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | GauntletMovie | — |
| C | [GauntletView](/v1.3.15/zh/api/campaign-ext/GauntletView) | 🔗 |
| C | [GeneratedGauntletMovie](/v1.3.15/zh/api/campaign-ext/GeneratedGauntletMovie) | 🔗 |
| C | [GeneratedWidgetData](/v1.3.15/zh/api/campaign-ext/GeneratedWidgetData) | 🔗 |
| I | [IGauntletMovie](/v1.3.15/zh/api/campaign-ext/IGauntletMovie) | 🔗 |
| I | [IGeneratedGauntletMovieRoot](/v1.3.15/zh/api/campaign-ext/IGeneratedGauntletMovieRoot) | 🔗 |
| C | [ItemTemplateUsage](/v1.3.15/zh/api/campaign-ext/ItemTemplateUsage) | 🔗 |
| C | [ItemTemplateUsageWithData](/v1.3.15/zh/api/campaign-ext/ItemTemplateUsageWithData) | 🔗 |
| C | [PrefabDatabindingExtension](/v1.3.15/zh/api/campaign-ext/PrefabDatabindingExtension) | 🔗 |
| C | [WidgetAttributeKeyTypeCommand](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeCommand) | 🔗 |
| C | [WidgetAttributeKeyTypeCommandParameter](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeCommandParameter) | 🔗 |
| C | [WidgetAttributeKeyTypeDataSource](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeDataSource) | 🔗 |
| C | [WidgetAttributeValueTypeBinding](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeBinding) | 🔗 |
| C | [WidgetAttributeValueTypeBindingPath](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeBindingPath) | 🔗 |
| C | [WidgetInstantiationResultDatabindingExtension](/v1.3.15/zh/api/campaign-ext/WidgetInstantiationResultDatabindingExtension) | 🔗 |

## TaleWorlds.GauntletUI.ExtraWidgets (22)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AnimatedNumberTextWidget](/v1.3.15/zh/api/campaign-ext/AnimatedNumberTextWidget) | 🔗 |
| C | [CustomWidgetManager](/v1.3.15/zh/api/campaign-ext/CustomWidgetManager) | 🔗 |
| C | [DelayedStateChanger](/v1.3.15/zh/api/campaign-ext/DelayedStateChanger) | 🔗 |
| C | [DialogButtonsParentWidget](/v1.3.15/zh/api/campaign-ext/DialogButtonsParentWidget) | 🔗 |
| C | [FillBar](/v1.3.15/zh/api/campaign-ext/FillBar) | 🔗 |
| C | [FillBarHorizontalWidget](/v1.3.15/zh/api/campaign-ext/FillBarHorizontalWidget) | 🔗 |
| C | [FillBarVerticalClipTierColorsWidget](/v1.3.15/zh/api/campaign-ext/FillBarVerticalClipTierColorsWidget) | 🔗 |
| C | [FillBarVerticalClipWidget](/v1.3.15/zh/api/campaign-ext/FillBarVerticalClipWidget) | 🔗 |
| C | [FillBarVerticalWidget](/v1.3.15/zh/api/campaign-ext/FillBarVerticalWidget) | 🔗 |
| C | [FillBarWidget](/v1.3.15/zh/api/campaign-ext/FillBarWidget) | 🔗 |
| C | [InputKeyVisualWidget](/v1.3.15/zh/api/campaign-ext/InputKeyVisualWidget) | 🔗 |
| C | [MouseWidget](/v1.3.15/zh/api/campaign-ext/MouseWidget) | 🔗 |
| C | [ScrollingRichTextWidget](/v1.3.15/zh/api/campaign-ext/ScrollingRichTextWidget) | 🔗 |
| C | [ScrollingTextWidget](/v1.3.15/zh/api/campaign-ext/ScrollingTextWidget) | 🔗 |
| C | [SiblingIndexVisibilityWidget](/v1.3.15/zh/api/campaign-ext/SiblingIndexVisibilityWidget) | 🔗 |
| C | [SmoothDecreaseIndicatorFillBar](/v1.3.15/zh/api/campaign-ext/SmoothDecreaseIndicatorFillBar) | 🔗 |
| C | [StringBasedVisibilityWidget](/v1.3.15/zh/api/campaign-ext/StringBasedVisibilityWidget) | 🔗 |
| E | [TooltipPositioningType](/v1.3.15/zh/api/campaign-ext/TooltipPositioningType) | 🔗 |
| C | [TooltipWidget](/v1.3.15/zh/api/campaign-ext/TooltipWidget) | 🔗 |
| C | [TwoWaySliderWidget](/v1.3.15/zh/api/campaign-ext/TwoWaySliderWidget) | 🔗 |
| C | [ValueBasedVisibilityWidget](/v1.3.15/zh/api/campaign-ext/ValueBasedVisibilityWidget) | 🔗 |
| E | [WatchTypes](/v1.3.15/zh/api/campaign-ext/WatchTypes) | 🔗 |

## TaleWorlds.GauntletUI.ExtraWidgets.Graph (3)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GraphLinePointWidget](/v1.3.15/zh/api/campaign-ext/GraphLinePointWidget) | 🔗 |
| C | [GraphLineWidget](/v1.3.15/zh/api/campaign-ext/GraphLineWidget) | 🔗 |
| C | [GraphWidget](/v1.3.15/zh/api/campaign-ext/GraphWidget) | 🔗 |

## TaleWorlds.GauntletUI.GamepadNavigation (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GamepadNavigationForcedScopeCollection](/v1.3.15/zh/api/campaign-ext/GamepadNavigationForcedScopeCollection) | 🔗 |
| C | [GamepadNavigationScope](/v1.3.15/zh/api/campaign-ext/GamepadNavigationScope) | 🔗 |
| E | [GamepadNavigationTypes](/v1.3.15/zh/api/campaign-ext/GamepadNavigationTypes) | 🔗 |
| C | [GauntletGamepadNavigationManager](/v1.3.15/zh/api/campaign-ext/GauntletGamepadNavigationManager) | 🔗 |

## TaleWorlds.GauntletUI.GauntletInput (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletInputContext](/v1.3.15/zh/api/campaign-ext/GauntletInputContext) | 🔗 |
| I | [IReadonlyInputContext](/v1.3.15/zh/api/campaign-ext/IReadonlyInputContext) | 🔗 |

## TaleWorlds.GauntletUI.Layout (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [DefaultLayout](/v1.3.15/zh/api/campaign-ext/DefaultLayout) | 🔗 |
| C | [DragCarrierLayout](/v1.3.15/zh/api/campaign-ext/DragCarrierLayout) | 🔗 |
| E | [GridDirection](/v1.3.15/zh/api/campaign-ext/GridDirection) | 🔗 |
| E | [GridHorizontalLayoutMethod](/v1.3.15/zh/api/campaign-ext/GridHorizontalLayoutMethod) | 🔗 |
| C | [GridLayout](/v1.3.15/zh/api/campaign-ext/GridLayout) | 🔗 |
| E | [GridVerticalLayoutMethod](/v1.3.15/zh/api/campaign-ext/GridVerticalLayoutMethod) | 🔗 |
| I | [ILayout](/v1.3.15/zh/api/campaign-ext/ILayout) | 🔗 |
| E | [LayoutMethod](/v1.3.15/zh/api/campaign-ext/LayoutMethod) | 🔗 |
| C | [StackLayout](/v1.3.15/zh/api/campaign-ext/StackLayout) | 🔗 |
| C | [TextLayout](/v1.3.15/zh/api/campaign-ext/TextLayout) | 🔗 |

## TaleWorlds.GauntletUI.PrefabSystem (26)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [ConstantDefinition](/v1.3.15/zh/api/campaign-ext/ConstantDefinition) | 🔗 |
| E | [ConstantDefinitionType](/v1.3.15/zh/api/campaign-ext/ConstantDefinitionType) | 🔗 |
| C | [CustomWidgetType](/v1.3.15/zh/api/campaign-ext/CustomWidgetType) | 🔗 |
| C | [GeneratedPrefabContext](/v1.3.15/zh/api/campaign-ext/GeneratedPrefabContext) | 🔗 |
| C | [GeneratedPrefabInstantiationResult](/v1.3.15/zh/api/campaign-ext/GeneratedPrefabInstantiationResult) | 🔗 |
| I | [IGeneratedUIPrefabCreator](/v1.3.15/zh/api/campaign-ext/IGeneratedUIPrefabCreator) | 🔗 |
| C | [PrefabExtension](/v1.3.15/zh/api/campaign-ext/PrefabExtension) | 🔗 |
| C | [PrefabExtensionContext](/v1.3.15/zh/api/campaign-ext/PrefabExtensionContext) | 🔗 |
| C | [VisualDefinitionTemplate](/v1.3.15/zh/api/campaign-ext/VisualDefinitionTemplate) | 🔗 |
| C | [VisualStateTemplate](/v1.3.15/zh/api/campaign-ext/VisualStateTemplate) | 🔗 |
| C | [WidgetAttributeContext](/v1.3.15/zh/api/campaign-ext/WidgetAttributeContext) | 🔗 |
| C | [WidgetAttributeKeyType](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyType) | 🔗 |
| C | [WidgetAttributeKeyTypeAttribute](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeAttribute) | 🔗 |
| C | [WidgetAttributeKeyTypeId](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeId) | 🔗 |
| C | [WidgetAttributeKeyTypeParameter](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeParameter) | 🔗 |
| C | [WidgetAttributeTemplate](/v1.3.15/zh/api/campaign-ext/WidgetAttributeTemplate) | 🔗 |
| C | [WidgetAttributeValueType](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueType) | 🔗 |
| C | [WidgetAttributeValueTypeConstant](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeConstant) | 🔗 |
| C | [WidgetAttributeValueTypeDefault](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeDefault) | 🔗 |
| C | [WidgetAttributeValueTypeParameter](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeParameter) | 🔗 |
| C | [WidgetCreationData](/v1.3.15/zh/api/campaign-ext/WidgetCreationData) | 🔗 |
| C | [WidgetExtensions](/v1.3.15/zh/api/campaign-ext/WidgetExtensions) | 🔗 |
| C | [WidgetFactory](/v1.3.15/zh/api/campaign-ext/WidgetFactory) | 🔗 |
| C | [WidgetInstantiationResult](/v1.3.15/zh/api/campaign-ext/WidgetInstantiationResult) | 🔗 |
| C | [WidgetPrefab](/v1.3.15/zh/api/campaign-ext/WidgetPrefab) | 🔗 |
| C | [WidgetTemplate](/v1.3.15/zh/api/campaign-ext/WidgetTemplate) | 🔗 |

## TaleWorlds.GauntletUI.TooltipExtensions (3)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [PrefabTooltipExtension](./campaign-ext/PrefabTooltipExtension) | 🔗 |
| C | [TooltipExtensionWidget](./campaign-ext/TooltipExtensionWidget) | 🔗 |
| C | [WidgetAttributeKeyTypeHint](./campaign-ext/WidgetAttributeKeyTypeHint) | 🔗 |
